# sub2api

./: .dockerignore  .gitignore  .goreleaser.simple.yaml  .goreleaser.yaml  DEV_GUIDE.md  Dockerfile  Dockerfile.compat  Dockerfile.goreleaser  Makefile  README.md  README_CN.md
.github/: audit-exceptions.yml
.github/workflows/: backend-ci.yml  docker-image-compatible.yml  docker-image.yml  release.yml  security-scan.yml
backend/: Makefile  go.mod  go.sum
backend/ent/: apikey.go  apikey_create.go  apikey_update.go  client.go  mutation.go  user.go  user_create.go  user_query.go  user_update.go
backend/migrations/: 001_init.sql  079_add_scheduled_test_pause_state.sql  080_add_proxy_maintenance_tables.sql  081_add_admin_task_states.sql  081_add_users_unlimited_concurrency.sql  082_ops_error_logs_add_endpoint_fields.sql  083_add_api_keys_group_ids.sql  084_accounts_priority_default_1.sql  085_add_signup_source_and_tls_fingerprint_profiles.sql  086_add_remaining_user_runtime_columns.sql  128_ensure_payment_orders.sql  129_ensure_payment_audit_logs.sql  131_affiliate_rebate_hardening.sql  (+3 more)
backend/rust/crates/proxyd/: Cargo.toml
backend/rust/crates/proxyd/src/: main.rs
deploy/: .env.example  DOCKER.md  Dockerfile  README.md  build_compat_image.sh  build_image.sh  config.example.yaml  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.standalone.yml  docker-compose.yml  docker-deploy.sh  docker-entrypoint.sh  install.sh  sub2api.service
frontend/: package.json  pnpm-lock.yaml
tools/: import_admin_accounts.sh  import_sub2api_data.sh
(+2490 files in other folders)
