[package]
name = "proxyd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bytes = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["server", "http1", "http2", "tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
h2 = "0.4"
fastwebsockets = { version = "0.8", features = ["unstable-split"] }
